translations added in spanish

--- a/Hippo/Language/es.lproj/HippoLocalizable.strings
+++ b/Hippo/Language/es.lproj/HippoLocalizable.strings
@@ -5,3 +5,54 @@
   Created by Arohi Sharma on 18/06/20.
   Copyright © 2020 CL-macmini-88. All rights reserved.
 */
+"Current" = "Actual";
+"Past" = "Pasado";
+"New Conversation" = "nueva conversación";
+"No internet connection" = "Sin Internet conectados";
+"Connected" = "Conectado";
+"Something went wrong. Please try again" = "Algo salió mal. Inténtalo de nuevo";
+"Loading..." = "Cargando...";
+"Photo & Video Library" = "Biblioteca de fotos y videos";
+"Camera" = "Cámara";
+"Document" = "Documentos";
+"Payment" = "Pago";
+"Retry" = "Rever";
+"Seems like you haven't started any chat yet, kick start it now!" = "Parece que no se ha iniciado ninguna charla, sin embargo, poner en marcha ahora!";
+"You have no chats." = "No tiene chats.";
+"Write a review" = "Escribe una reseña";
+"Send a message..." = "Enviar un mensaje...";
+"Please enter some text." = "Por favor ingrese un texto.";
+"Cancel" = "Cancelar";
+"OK" = "Okay";
+"Support" = "Apoyo";
+"Please select atleast one option" = "Por favor, seleccione al menos una opción";
+"Broadcast Details" = "Detalles de emisión";
+"Recipients" = "destinatarios";
+"Add an option" = "Añadir una opción";
+"Request Payment" = "Solicitar pago";
+"Save Plan" = "Guardar el plan";
+"Update Plan" = "actualización del plan";
+"Connecting..." = "Conectando...";
+"Your request has been submitted successfully" = "Su solicitud ha sido enviado correctamente";
+"Call Back" = "Llamar de vuelta";
+"Call Again" = "Llama de nuevo";
+"call ended" = "llamada terminada";
+"video" = "vídeo";
+"voice" = "voz";
+"The" = "los";
+"Missed" = "perdidas";
+"call" = "Llamada";
+"Ongoing" = "En marcha";
+"- PAID -" = "- PAGADO -";
+"- PENDING -" = "- Pendiente -";
+"Free" = "Gratis";
+"at" = "a";
+"Today" = "Hoy";
+"Yesterday" = "Ayer";
+"Pay" = "Pagar";
+"Done" = "Hecho";
+"Select" = "Seleccione";
+"Clear All" = "Limpiar todo";
+"Read More" = "Más";
+"Read Less" = "Leer Menos";
+"No Notifications found" = "No se encontraron notificaciones";
