spanish translation done for cpsdk

--- a/Hippo/Language/en.lproj/HippoLocalizable.strings
+++ b/Hippo/Language/en.lproj/HippoLocalizable.strings
@@ -5,4 +5,4 @@
   Created by Arohi Sharma on 18/06/20.
   Copyright © 2020 CL-macmini-88. All rights reserved.
 */
-"Current" = "Try translation";
+"Current" = "Current";
