--- a/Hippo/Language/es.lproj/HippoLocalizable.strings
+++ b/Hippo/Language/es.lproj/HippoLocalizable.strings
@@ -207,6 +207,8 @@
 "Payment Request" = "Solicitud de pago";
 "is calling you......" = "le está llamando ......";
 "No Comment..." = "Sin comentarios...";
+"Send Photo" = "Enviar foto";
+"Back" = "Espalda";
 
 
 
