agent sdk completed

--- a/Hippo/Language/es.lproj/HippoLocalizable.strings
+++ b/Hippo/Language/es.lproj/HippoLocalizable.strings
@@ -585,8 +585,8 @@
 "New Customer" = "Nueva cliente";
 "you missed call from" = "perdiste la llamada de";
 "Are you sure, you want to assign this chat to you?" = "¿Seguro, que desea asignar este chat para usted?";
-
-
+"Saved!" = "¡Salvado!";
+"Image has been saved to your photos." = "La imagen se ha guardado en sus fotos.";
 
 
 
